--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>energy source</title>
+    <title>energy source Growth Rate</title>
 </head>
 
 <body>
     <button onclick="update(Solar)">Solar</button>
     <button onclick="update(Gas)">Gas</button>
 
-    <div id="myChart"></div>
+    <div align="center" id="myChart"></div>
     <h3>
         Energy Source Growth Rate Change from 2012 to 2021 in U.S.
     </h3>
     <script src="https://d3js.org/d3.v4.js"></script>
     <script src="vis.js" charset="utf-8"></script>
+    <h4 align="center">
+        year</h4>
     <a href="https://xiaojingwu138.github.io/scene2/" xScale="40" yScale="50">Home Page</a>
 <a href="https://xiaojingwu138.github.io/v1/">Scene 1</a>
 <a href="https://xiaojingwu138.github.io/v3/">Scene 3</a>
