--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>energy source Growth Rate</title>
 </head>
-<h3>
+<h3 align="center">
         Energy Source Growth Rate Change from 2012 to 2021 in U.S.
-    </h3>
 <body>
     <button onclick="update(Solar)">Solar</button>
     <button onclick="update(Gas)">Gas</button>
