--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="vis.js" charset="utf-8"></script>
     <h4 align="center">
         year</h4>
-    <a href="https://xiaojingwu138.github.io/scene2/" xScale="40" yScale="50">Home Page</a>
+    <a href="https://xiaojingwu138.github.io/homepage/" xScale="40" yScale="50">Home Page</a>
 <a href="https://xiaojingwu138.github.io/v1/">Scene 1</a>
 <a href="https://xiaojingwu138.github.io/v3/">Scene 3</a>
 </body>
