--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h4 align="center">
         year</h4>
     <a href="https://xiaojingwu138.github.io/homepage/">Home Page</a>
-<a href="https://xiaojingwu138.github.io/v1/">Scene 1</a>
+<a href="https://xiaojingwu138.github.io/s1/">Scene 1</a>
 <a href="https://xiaojingwu138.github.io/v3/">Scene 3</a>
 </body>
 
